// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/SearchField Search Field disabled 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 16.625rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-6 path {
  fill: #5f6c85;
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
}

.emotion-8+label {
  font-size: 0.9375rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-8::-moz-placeholder {
  color: #5f6c85;
}

.emotion-8:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-8::placeholder {
  color: #5f6c85;
}

.emotion-8:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-8:focus+label,
.emotion-8:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-8:disabled {
  cursor: not-allowed;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 16.625rem;
  height: 2.25rem;
  background-color: white;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-15 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
}

.emotion-15+label {
  font-size: 0.8125rem;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-15::-moz-placeholder {
  color: #5f6c85;
}

.emotion-15:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-15::placeholder {
  color: #5f6c85;
}

.emotion-15:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-15:focus+label,
.emotion-15:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-8"
              disabled={true}
              onChange={[Function]}
              placeholder="Search"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-15"
              disabled={true}
              onChange={[Function]}
              placeholder="Search"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/SearchField Search Field sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 16.625rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-6 path {
  fill: #5f6c85;
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
}

.emotion-8+label {
  font-size: 0.9375rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-8::-moz-placeholder {
  color: #5f6c85;
}

.emotion-8:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-8::placeholder {
  color: #5f6c85;
}

.emotion-8:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-8:focus+label,
.emotion-8:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-8:disabled {
  cursor: not-allowed;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 16.625rem;
  height: 2.25rem;
  background-color: white;
}

.emotion-9:hover {
  background-color: #f3f5f8;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-15 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
}

.emotion-15+label {
  font-size: 0.8125rem;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-15::-moz-placeholder {
  color: #5f6c85;
}

.emotion-15:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-15::placeholder {
  color: #5f6c85;
}

.emotion-15:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-15:focus+label,
.emotion-15:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-8"
              onChange={[Function]}
              placeholder="Search"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-15"
              onChange={[Function]}
              placeholder="Search"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/SearchField Search Field with placeholder 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 16.625rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-6 path {
  fill: #5f6c85;
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
}

.emotion-8+label {
  font-size: 0.9375rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-8::-moz-placeholder {
  color: #5f6c85;
}

.emotion-8:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-8::placeholder {
  color: #5f6c85;
}

.emotion-8:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-8:focus+label,
.emotion-8:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-8:disabled {
  cursor: not-allowed;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 16.625rem;
  height: 2.25rem;
  background-color: white;
}

.emotion-9:hover {
  background-color: #f3f5f8;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-15 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
}

.emotion-15+label {
  font-size: 0.8125rem;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-15::-moz-placeholder {
  color: #5f6c85;
}

.emotion-15:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-15::placeholder {
  color: #5f6c85;
}

.emotion-15:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-15:focus+label,
.emotion-15:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-8"
              onChange={[Function]}
              placeholder="Placeholder"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-15"
              onChange={[Function]}
              placeholder="Placeholder"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
